# pytorch-bert-crf-ner

./: .gitignore  inference.py  pyproject.toml  requirements.txt
.ipynb_checkpoints/: Interactive_shell_NER-checkpoint.ipynb
model/.ipynb_checkpoints/: net-checkpoint.py
